# DVA-Flight-Planner

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
Data Info/: aircraft_family.csv  aircraft_profiles.csv  equipment_type.csv
scripts/docs/: README.md  capture-readme-screenshots.ps1  docshot-manifest.json
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: deltava_auth.rs  deltava_login.rs  main.rs  simbrief.rs
src/components/: AccomplishmentsPanel.jsx  DetailsPanel.jsx  FilterBar.jsx  FlightTable.jsx  ScheduleTablePanel.jsx  ScheduleWorkspaceHeader.jsx  ScheduleWorkspacePanel.jsx
src/components/data-table/: DataTable.jsx
src/components/dutySchedule/: DutyScheduleControls.jsx  DutyScheduleFilters.jsx  DutySchedulePanel.jsx  DutyScheduleStatus.jsx  DutyScheduleSummary.jsx
src/components/layout/: AppFooter.jsx
src/components/map/: FlightMapPanel.jsx  FlightMapView.jsx  mapModes.js  mapTheme.js
src/components/table/: DataTable.jsx  TableHeader.jsx  TableRow.jsx  tableUtils.js  tableWidthPresets.js
src/components/tables/: FlightsTable.jsx  (+3 more)
src/data/: airlines.csv  airports.csv  icao_regions_countries.csv
src/lib/: accomplishments.js  addonAirportScan.js  aircraftCatalog.js  airlineBranding.js  airportCatalog.js  appLog.js  constants.js  deltaVirtualCredentials.js  deltaVirtualSync.js  formatters.js  importClient.js  simbrief.js  storage.js  updateCheck.js
src/workers/: importWorker.js
(+22 files in other folders)
