[package]
name = "flight-planner-app"
version = "0.2.0-alpha"
description = "Desktop flight planner for flight simulator schedule imports."
authors = ["Jake"]
edition = "2021"
default-run = "DVAFlightPlanner"

[[bin]]
name = "DVAFlightPlanner"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
md5 = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync", "time"] }
webview2-com = "0.38.2"
windows = "0.61.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
